style: set dynamiclaly shifting  white content box to fixed position (vertically)

--- a/src/App.scss
+++ b/src/App.scss
@@ -583,7 +583,7 @@ $project-thumbnail-width: 320px;
 .about-component {
     .about-container {
         padding: 2rem;
-        margin: 12% auto 0;
+        margin: 100px auto 0;
         width: 80%;
         width: min(100%, 1100px);
         max-width: 1000px;
@@ -684,7 +684,7 @@ $project-thumbnail-width: 320px;
     height: 100vh;
     .more-container {
         padding: 2rem;
-        margin: 12% auto 0;
+        margin: 100px auto 0;
         width: 80%;
         width: min(100%, 1100px);
         min-height: 80%;
